feat: Implement tour detail page with dedicated backend API, new entity fields, and frontend component.